# Bit-O-Code

./: README.md  pyproject.toml
IQ/: 172.py  182.py  192.py  196.py  199.py  200.py  216.py  223.py  227.py  240.py  252.py  274.py  288.py  292.py
SQLZOO/: self_join.sql  windows.sql  windows.txt
leetcode/:  Leetcode 1108 Defanging an IP Address.py  Leetcode 1213 Intersection of Three Sorted Arrays.py  Leetcode 20 Valid Parentheses.py  Leetcode 242 Valid Anagram  Leetcode 349 Intersection of Two Arrays.py  Leetcode 53 Maximum Subarray.py  Leetcode 67 Add Binary.py  Leetcode 896 Monotonic Array.py  Leetcode Intersection of Three Sorted Arrays.py
leetcode/Python/: Leetcode 1 Two Sum.py  Leetcode 100 Same Tree.py  Leetcode 104 Maximum Depth of Binary Tree.py  Leetcode 11 Container With Most Water.py  Leetcode 121 Best Time to Buy and Sell Stock.py  Leetcode 125 Valid Palindrome.py  Leetcode 152 Maximum Product Subarray.py  Leetcode 153 Find Minimum in Rotated Sorted Array.py  Leetcode 1555 Bank Account Summary.sql  Leetcode 169 Majority Element.py  Leetcode 20 Valid Parentheses.py  Leetcode 217 Contains Duplicate.py  Leetcode 238 Product of Array Except Self.py  Leetcode 270 Closest Binary Search Tree Value.py  Leetcode 283 Move Zeroes.py  Leetcode 3 Longest Substring Without Repeating Characters.py  Leetcode 33 Search in Rotated Sorted Array.py  Leetcode 349 Intersection of Two Arrays.py  Leetcode 415 Add String.py  Leetcode 5 Longest Palindromic Substring.py  (+5 more)
ml/tf/: tf_toy_gbm.py
sklearn/: sklearn_toy_lin_reg.py  sklearn_toy_log_reg.py
tf/: tf_toy_lin_reg.py
(+103 files in other folders)
